--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Seismocardiograph</string>
     <string name="test_start">Rozpocznij badanie</string>
+    <string name="show_plot">Pokaż wykresy</string>
     <string name="save">Zapisz wynik</string>
     <string name="dateFormat">dd-MM-yyyy</string>
 
