add axis selection in PlotActivity and info ic_info_black_24dp in menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="show_plot">Pokaż wykresy</string>
     <string name="save">Zapisz wynik badania</string>
     <string name="dateFormat">dd-MM-yyyy</string>
+    <string name="XAxis">Oś X</string>
+    <string name="YAxis">Oś Y</string>
+    <string name="ZAxis">Oś Z</string>
 
 </resources>
